--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "author": "hongguodong123 <1004826586@qq.com>",
   "private": true,
   "scripts": {
-    "dev": "webpack-dev-server --inline --progress --config build/webpack.dev.conf.js --port=3000",
+    "dev": "webpack-dev-server --inline --progress --config build/webpack.dev.conf.js --port 3000",
     "start": "npm run dev",
     "unit": "cross-env BABEL_ENV=test karma start test/unit/karma.conf.js --single-run",
     "test": "npm run unit",
@@ -64,6 +64,7 @@
     "karma-sourcemap-loader": "^0.3.7",
     "karma-spec-reporter": "0.0.31",
     "karma-webpack": "^2.0.2",
+    "lyric-parser": "^1.0.1",
     "mocha": "^3.2.0",
     "node-notifier": "^5.1.2",
     "optimize-css-assets-webpack-plugin": "^3.2.0",
